Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17869

[REG 4.2 -> 4.3] Crash when building CMake project

    XMLWordPrintable

Details

    Description

      1. Get the sources of Speedcrunch 0.11.
        I can send them to you if needed.
      2. Open src/CMakeLists.txt in Creator.
      3. Check the "Default" build configuration of a kit using Qt 4.8.
      4. Click "Configure Project".
      5. Try to build the project.
        Creator crashes:
        1   QString::replace                                                                                                                                                                                                                                                                       qstring.cpp                 2516 0x7ffff607cf2c 
        2   QString::replace                                                                                                                                                                                                                                                                       qstring.cpp                 2416 0x7ffff607c9eb 
        3   QmlJS::PersistentTrie::(anonymous namespace)::ReplaceInTrie::operator()                                                                                                                                                                                                                persistenttrie.cpp          293  0x7fffdfb2a852 
        4   QmlJS::PersistentTrie::enumerateTrieNode<QmlJS::PersistentTrie::(anonymous namespace)::ReplaceInTrie>                                                                                                                                                                                  persistenttrie.h            119  0x7fffdfb2d6c9 
        5   QmlJS::PersistentTrie::TrieNode::replaceF                                                                                                                                                                                                                                              persistenttrie.cpp          305  0x7fffdfb2a97c 
        6   QmlJS::PersistentTrie::Trie::replace                                                                                                                                                                                                                                                   persistenttrie.cpp          603  0x7fffdfb2cd32 
        7   QmlJS::QmlBundle::replaceVars                                                                                                                                                                                                                                                          qmljsbundle.cpp             119  0x7fffdfa651d7 
        8   QmlJSTools::BasicBundleProvider::mergeBundlesForKit                                                                                                                                                                                                                                    qmljsbundleprovider.cpp     150  0x7fffdf1dc551 
        9   QmlJSTools::setupProjectInfoQmlBundles                                                                                                                                                                                                                                                 qmljsmodelmanager.cpp       150  0x7fffdf1e4158 
        10  QmlJSTools::Internal::ModelManager::defaultProjectInfoForProject                                                                                                                                                                                                                       qmljsmodelmanager.cpp       129  0x7fffdf1e3d60 
        11  CMakeProjectManager::CMakeProject::updateQmlJSCodeModel                                                                                                                                                                                                                                cmakeproject.cpp            205  0x7fffdcfc64a4 
        12  CMakeProjectManager::CMakeProject::updateProjectData                                                                                                                                                                                                                                   cmakeproject.cpp            186  0x7fffdcfc62d9 
        13  CMakeProjectManager::Internal::CMakeBuildConfiguration::<lambda(const QString&)>::operator()(const QString &) const                                                                                                                                                                    cmakebuildconfiguration.cpp 153  0x7fffdcfeae70 
        14  QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<const QString&>, void, CMakeProjectManager::Internal::CMakeBuildConfiguration::ctor()::<lambda(const QString&)>>::call(CMakeProjectManager::Internal::CMakeBuildConfiguration::<lambda(const QString&)> &, void * *) qobjectdefs_impl.h          137  0x7fffdcfef056 
        15  QtPrivate::Functor<CMakeProjectManager::Internal::CMakeBuildConfiguration::ctor()::<lambda(const QString&)>, 1>::call<QtPrivate::List<QString const&>, void>(CMakeProjectManager::Internal::CMakeBuildConfiguration::<lambda(const QString&)> &, void *, void * *)                     qobjectdefs_impl.h          194  0x7fffdcfeeeba 
        16  QtPrivate::QFunctorSlotObject<CMakeProjectManager::Internal::CMakeBuildConfiguration::ctor()::<lambda(const QString&)>, 1, QtPrivate::List<const QString&>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *)                                                qobject_impl.h              168  0x7fffdcfeed3c 
        17  QtPrivate::QSlotObjectBase::call                                                                                                                                                                                                                                                       qobject_impl.h              101  0x7ffff62539bf 
        18  QMetaObject::activate                                                                                                                                                                                                                                                                  qobject.cpp                 3723 0x7ffff6250679 
        19  QMetaObject::activate                                                                                                                                                                                                                                                                  qobject.cpp                 3602 0x7ffff624ff7a 
        20  CMakeProjectManager::Internal::BuildDirManager::errorOccured                                                                                                                                                                                                                           moc_builddirmanager.cpp     164  0x7fffdd071c9a 
        ... <Mehr>                                                                                                                                                                                                                                                                                                                                 
        

      Creator 4.2 did not crash in this situation.

      Found by Squish test tst_cmake_speedcrunch.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-17869
          # Subject Branch Project Status CR V

          Activity

            People

              hunger Tobias Hunger
              rlohning Robert Löhning
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes